# overseer

./: .gitignore  README.md  Untitled  __init__.py  client.py  content_game.jsx  game_engine.py  game_loop.py  judge.py  models.py  observation.py  openenv.yaml  openenv_server.py  overseer_server.py  prompts.py  pyproject.toml  repair_game_data.py  requirements.txt
colab/: minimal_trl_overseer.ipynb
frontend/: index.html
server/: Dockerfile  __init__.py  app.py  overseer_environment.py
tests/: test_judge.py  test_observation.py  test_openenv_env.py  test_repair_game_data.py
training/: eval_overseer.py  export_metric_csv.py  minimal_trl_grpo.py  minimal_trl_sft.py
